NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.1                         (2023-07-13)
----------------------------------------------------------------------
 * Include EULA file.

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.0                         (2023-06-22)
----------------------------------------------------------------------
 * Revoved LSB

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.62.2                      (2023-05-24)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.62.1                      (2023-04-11)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.62                        (2023-03-29)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.61.2                      (2023-03-06)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.61.1                      (2023-02-20)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.61                        (2023-02-06)
----------------------------------------------------------------------
 * Supported new models
