@@ -1,6 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
 DIST epson-inkjet-printer-escpr2-1.2.1-1.x86_64.rpm 3735270 BLAKE2B 4a906f807c8dde50a288a7364fe6ad65785d0651765c714de501f43d0ac606d198b4908a45975b67116ef950241c241a299b6ff26bf6fcebc7427d043b81e0e5 SHA512 4604862d32f18461f278f29dece1de57bce844474d81ec4a9d4d967de9573f055650f30dd6475e460b6beb21c33a2460c9aca503053137a607b99e7f94527afd
+DIST epson-inkjet-printer-escpr2-1.2.2-1.x86_64.rpm 3772489 BLAKE2B 4594e5dd17a2927ffe42415d1722737ec0e1e45f30a1a1bd63d9a29c01b960a0dcea2a7d19863ee1b3e0a526b24d66009e197c34c2702e30611248e3422503e4 SHA512 e1d73bb443e11b3787e0af3858ded414ccaac173d644575e2f8a3f217e6dcf96ad7dc70d9601dfae589c91f30aff17b4afaca3d9836beb7230cff153ebb8b4be
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1670 BLAKE2B 97c912c8ea7e1e6c5bad222e8d621b0b1da449ca04e0cac013bc44d6661f689e17a22ab1601f92ccccb36de8e31059724524d1a5b232afb78c4c18a7c3908ce2 SHA512 0af49868af1bc5e93cc7ffb57929ad38e17dbef05cb77b009d2e69b87cdf551b10b9d65f4e2e81e3c9dcaf72b2dbc94bee1c374a3e81aa667f512cce092dee6f
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.1.ebuild 1348 BLAKE2B 6e95885ada780125e368b554bb9cc1e6af404d10f80428296a199a3d6e4e6d436e80b8f8c96952961625d27077146d98a85c9e5e6e3427fe4310169f997f8b01 SHA512 514a406504913076dac6320602f08f64076cfb35c16baf34da9dbab90b68cf1d2d2f8a6350a7e3bd08f77d98884deccb420816717f7c858cf7a86e7db0ffc417
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.2.ebuild 1348 BLAKE2B 664cbe555b85829ed45cab4aef296898f71a90215c820f3d8c78eb86acd3bb62c73abc28c89aa7e3572664f256f00eabfd3fdf4b222a744cf7be2500f2b6d778 SHA512 b4b04279c07764f214ce5c56eefd94595cacfa0f0158ddc53791ad59dc57f980894a8457da044e0bff484eb2525021c4508621e0ae0c2ec1d753a18ac77d868f
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
