@@ -1,6 +1,8 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
 DIST epson-inkjet-printer-escpr2-1.2.1-1.tar.gz 5105231 BLAKE2B 4aed03fafd8edc1cd1cf8d04279a5bd9006c3cf73a9c28c17d114d6cc9f999c6040ecdb910260814d7190b7ad0a0e229fe9d4a2f78100b9e966a460ec1724b58 SHA512 ec9f0daf50916299ac82b3c0715740ff3feaf61a823295b992ffe4b3bee24af3c062279e24accff397a6a95a249c778f1bc341ef5ebcc2301b71381531392499
+DIST epson-inkjet-printer-escpr2-1.2.2-1.tar.gz 5144798 BLAKE2B 2ebf6169f8cfaf9a22ae5ed2874998018216294691e4b1da24ea85d254a8b332d5a8b0f71b68f26790985bbc74b221048d6171dd4f65219824606d8ece5c7f45 SHA512 42816554935d7309b197b106ed98f0d5c7baf2ad3c5faf0fee2648959a05f107f745764d3cd8c009cc51298b86050fcc375417049090aef959bd8629f8f47432
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1319 BLAKE2B 1ac127fac4aec11e279e8f2b2b46d628e51b6cd22a001044e366d4a94cbb5b9e0b4aadaedde11337c6dd681999325142d2b1a77a22ea9319962bbcd02c49f992 SHA512 6d251c780d850ec05c2c9fd9bb9137adc0d1aa114783d6a7ee05c1efba58ca8f2a28600858f25c1de2425fd17358b949ab05d9c3677ead12d1f6cf3350af0f08
 EBUILD epson-inkjet-printer-escpr2-1.2.1.ebuild 1321 BLAKE2B e2186d7df85a4965689d1b04bf3c60558208f562a1735c46cda2f9587b070ad4a573c1347c853dd64e8b6d22220f645ccb1b26f5d54d9d176ccbe0fdf21f9e9e SHA512 8073b9f3919a562724b31dd319d6b7ebf90a6d83b7318fc287e51ed4d9c342ef318205316585bee4ea1e14f2023d36acc6acc7dcef92f1c36c1b37f80edfcc72
+EBUILD epson-inkjet-printer-escpr2-1.2.2.ebuild 1321 BLAKE2B ffc1bba50b9008a8c131db6db74b82846fdee5cb600590df902a63a98b6e4bd75bc6b949aa9a004a3c70f2b91c7fdac4d699b54e54df85119c924a834bf3c056 SHA512 d36fbeabd31e748f443b7595bf50b9f01542e0d3c10829a1c57506b76e4ee47300c5c5937cde33207bd9b6cdeca282d9aefed3a66bc61634fd4481cc6691f67f
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
