@@ -1,9 +1,14 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.2.2                         (2023-07-24)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.2.1                         (2023-07-13)
 ----------------------------------------------------------------------
- * Include EULA file.
+ * Include EULA file
 
 ----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.2.0                         (2023-06-22)
